<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">
    <string-array name="count_players">
        <item>Player 1</item>
        <item>Player 2</item>
        <item>Player 3</item>
        <item>Player 4</item>
    </string-array>

    <string name="app_name">Tater Pop</string>
    <string name="name">Name</string>
    <string name="privacy">Privacy</string>
    <string name="lobby">Lobby</string>
    <string name="numberplayers">Number of Players</string>
    <string-array name="numberplayers_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>
    <string name="service_id">com.example.android.alphap</string>
    <string name="connect_text">Connect Tater</string>

    <!-- Team Member Names and Titles-->
    <string name="creators">Creators</string>
    <string name="projectmanager">Tech Lead</string>
    <string name="riditanizam">Ridita Nizam</string>
    <string name="designlead">Design Lead</string>
    <string name="yojanasharma">Yojana Sharma</string>
    <string name="demolead">Demo Lead</string>
    <string name="eddiemelendez">Eddie Melendez</string>
    <string name="techlead">Tech Lead</string>
    <string name="asiagibson">Asia Gibson</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_hot_potato">HotPotato</string>

    <!-- DONT TOUCH -->
    <string name="signin_other_error">There was an issue with sign in, please try again later</string>
    <string name="signin_failure">Unable to sign in</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Testing/Sampling -->
    <string name="gesture_sample">Hello Worldy</string>

    <!-- google play games -->
    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>

</resources>
