<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ImageView="http://schemas.android.com/apk/res-auto">

        <!-- SIGN-IN SCREEN -->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/screen_sign_in" style="@style/LLScreen">
            <TextView style="@style/GameTitle"
                android:layout_width="wrap_content" />
            <TextView style="@style/GameBlurb" />

            <Button android:id="@+id/button_single_player"
                style="@style/MainScreenButton"
                android:text="@string/single_player" />
            <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
                style="@style/SignInButton" />
        </LinearLayout>

        <!-- MAIN SCREEN -->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"

            android:id="@+id/screen_main" style="@style/LLScreen">
            <TextView style="@style/GameTitle" />
            <Button android:id="@+id/button_single_player_2"
                style="@style/MainScreenButton"
                android:text="@string/single_player" />
            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/single_player_explanation" />
            <Button android:id="@+id/button_quick_game"
                style="@style/MainScreenButton"
                android:text="@string/quick_game" />
            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/quick_game_explanation" />
            <Button android:id="@+id/button_invite_players"
                style="@style/MainScreenButton"
                android:text="@string/invite_players" />
            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/invite_players_explanation" />
            <Button android:id="@+id/button_see_invitations"
                style="@style/MainScreenButton"
                android:text="@string/see_invitations" />
            <TextView style="@style/MainScreenButtonBlurb"
                android:text="@string/see_invitations_explanation" />
            <Button android:id="@+id/button_sign_out"
                style="@style/SignOutButton"
                android:text="@string/sign_out" />
        </LinearLayout>

        <!-- INVITATION POPUP -->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/invitation_popup" style="@style/InvPopup">
            <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
            <Button android:id="@+id/button_accept_popup_invitation"
                style="@style/InvPopupButton"
                android:text="@string/accept_popup_invite" />
        </LinearLayout>

        <!-- "PLEASE WAIT" SCREEN -->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/screen_wait" style="@style/LLScreen">
            <TextView style="@style/Blurb" android:text="@string/please_wait" />
        </LinearLayout>

        <!-- GAMEPLAY SCREEN -->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/screen_game"
            style="@style/LLScreen">

            <ImageView
                android:id="@+id/iv_pb"
                android:src="@drawable/potatobuddy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView android:id="@+id/instructions"
                style="@style/Instructions" android:text="@string/instructions" />

        </LinearLayout>
    </FrameLayout>


