<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.alphap.Yuri.GameSettings">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/et_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/privacy"
            android:textColor="@color/blue"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/tv_switchbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_privacy"
            android:layout_centerHorizontal="true"
            android:text="Switch Button Goes Here" />

        <RelativeLayout
            android:id="@+id/numberplayerstextspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_switchbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/numberplayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberplayers"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/numberplayers">
            </Spinner>

        </RelativeLayout>

        <Button
            android:id="@+id/strt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberplayerstextspinner"
            android:layout_centerHorizontal="true"
            android:text="START"
            android:textStyle="bold"/>

    </RelativeLayout>

</RelativeLayout>